# lord-of-the-files

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  desktop-builds.yml
docs/: byok-ai-rename-plan.md  logging.md
mock-backend/: server.mjs
scripts/: build-appimage-podman.sh
src/: App.css  App.tsx  store.test.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  ai_history.rs  ai_registry.rs  commands.rs  fs_scan.rs  history.rs  integration_tests.rs  lib.rs  logging.rs  main.rs  settings.rs  types.rs
src-tauri/src/engine/: conflicts.rs  mod.rs  steps.rs
src/components/: AddStepMenu.tsx  AiHistoryPanel.tsx  AiRequestDetailModal.tsx  DiffText.tsx  FileTable.tsx  HistoryDetailModal.tsx  HistoryPanel.tsx  PipelineEditor.tsx  SavePresetDialog.tsx  SettingsPanel.tsx  StepCard.tsx  Toolbar.tsx
src/components/DevMenu/: MockAiSection.tsx  index.tsx
src/components/SettingsPanel/: AdvancedSettings.tsx  ApiKeyField.tsx  GeneralSettings.tsx  ProfileCard.tsx  ProfileForm.tsx  ProfileList.tsx  ProviderGrid.tsx  index.tsx  profileEditor.ts
src/components/StepCard/: AiFields.tsx  ChangeCaseFields.tsx  CleanUpFields.tsx  CounterFields.tsx  FindReplaceFields.tsx  InsertFields.tsx  RegexFields.tsx  RemoveFields.tsx  StepCardHead.tsx  index.tsx  types.ts
src/components/common/: Badge.tsx  Button.tsx  Checkbox.tsx  Field.tsx  Overlay.tsx  index.ts
src/lib/: aiHistoryStatus.ts  diff.ts  historyStatus.ts  ipc.ts  log.ts  presets.ts  providers.ts  steps.ts  types.ts
