[package]
name = "lord-of-the-files"
version = "0.1.0"
description = "A suite of file tools — starting with a batch file renamer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lord_of_the_files_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
futures = "0.3"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
# `openai` is enabled alongside `openaicompatible` to work around a v0.5.2 bug where
# `openai_compatible::embedding_model` unconditionally references `providers::openai` without
# gating on the `openai` feature; still far short of compiling in all 75 providers.
aisdk = { version = "0.5", default-features = false, features = ["openaicompatible", "language-model-request", "openai"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
